--- a/index.html
+++ b/index.html
@@ -8,8 +8,34 @@
     <title>devfest</title>
   </head>
   <body>
-    <div class="navbar">navbar</div>
-    <div class="container"></div>
+    <div class="navbar flex space">
+      <span class="title space">Name</span>
+      <ul class="flex">
+        <li><a href="">Home</a></li>
+        <li><a href="">Category</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">4</a></li>
+      </ul>
+    </div>
+    <div class="section flex">
+      <div class="container1 flex">
+        <div class="web-info">Website name</div>
+        <div class="web-img">
+          <img class="img-size" src="Ngo/Group 3.png" alt="group3" />
+        </div>
+      </div>
+      <div class="container2 flex">
+        <div class="cont-left flex">
+          <p class="about-info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+            aperiam ex, saepe quia dicta dolor vitae dignissimos? Voluptatem,
+            incidunt quo.
+          </p>
+          <img class="img-size" src="Ngo/Group 1.png" alt="group1" />
+        </div>
+        <div class="cont-right flex">people</div>
+      </div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
