--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
     </div>
     <div class="section flex">
       <div class="container1 flex">
-        <div class="web-info">Website name</div>
+        <div class="web-info flex">
+          <h1>Website name</h1>
+          <button class="btn">button</button>
+        </div>
         <div class="web-img">
           <img class="img-size" src="Ngo/Group 3.png" alt="group3" />
         </div>
       </div>
       <div class="container2 flex">
-        <div class="cont-left flex">
+        <div class="cont-left flex space">
+          <h1>Title</h1>
           <p class="about-info">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
             aperiam ex, saepe quia dicta dolor vitae dignissimos? Voluptatem,
@@ -33,7 +37,10 @@
           </p>
           <img class="img-size" src="Ngo/Group 1.png" alt="group1" />
         </div>
-        <div class="cont-right flex">people</div>
+        <div class="cont-right flex">
+          <div class="donations flex">people</div>
+          <button class="btn">Donate Now</button>
+        </div>
       </div>
     </div>
     <script src="main.js"></script>
