--- a/index.html
+++ b/index.html
@@ -4,23 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>devfest</title>
   </head>
-  <body>
-    <div class="navbar flex space">
+  <body id="home">
+    <div class="navbar flex">
       <span class="title space">Name</span>
       <ul class="flex">
-        <li><a href="">Home</a></li>
-        <li><a href="">Category</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">4</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="categories.html">Category</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="section flex">
       <div class="container1 flex">
         <div class="web-info flex">
           <h1>Website name</h1>
+          <p>Giving makes us happier...</p>
           <button class="btn">button</button>
         </div>
         <div class="web-img">
@@ -29,7 +35,7 @@
       </div>
       <div class="container2 flex">
         <div class="cont-left flex space">
-          <h1>Title</h1>
+          <h1>About</h1>
           <p class="about-info">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
             aperiam ex, saepe quia dicta dolor vitae dignissimos? Voluptatem,
@@ -38,7 +44,11 @@
           <img class="img-size" src="Ngo/Group 1.png" alt="group1" />
         </div>
         <div class="cont-right flex">
-          <div class="donations flex">people</div>
+          <div class="donations flex">
+            <span>p</span>
+            <span>p</span>
+            <span>p</span>
+          </div>
           <button class="btn">Donate Now</button>
         </div>
       </div>
