Made Changes to Landing & Contact Page

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <style>
       body {
         overflow: hidden;
-        font-family: ;
+        font-family: 'Circe Regular';
       }
       :root {
         --secondary: rgb(224, 219, 219);
@@ -33,6 +33,7 @@
       }
       p {
         max-width: 700px;
+        color: #193C3C;
       }
       .img1 {
         position: absolute;
@@ -54,6 +55,7 @@
       }
       label {
         font-size: 15px;
+        color: #193C3C;
       }
       input {
         border: 3px solid #71d2d2;
@@ -80,8 +82,7 @@
     <div class="contact">
       <div class="contact-section">
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum amet
-          praesentium est consectetur animi accusamus?
+          Don't worry, if you have any questions or doubts &mdash; feel free to contact us.
         </p>
 
         <div class="contact-form">
