--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="Category/css/font-circe.css">
     <link rel="stylesheet" href="style.css" />
-    <title>devfest</title>
+    <title>NGO Navigation - Find your nearest NGO</title>
   </head>
   <body id="home">
     <div class="navbar flex">
-      <span class="title space">Name</span>
+      <span class="title space">NGO Navigation</span>
       <ul class="flex">
         <li><a href="index.html">Home</a></li>
-        <li><a href="/Category/index.html">Category</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/Category/index.html">List</a></li>
+        <li><a href="#">Nearby</a></li>
+        <li><a href="contact.html">Contact</a></li>  
       </ul>
     </div>
     <div class="section flex">
       <div class="container1 flex">
         <div class="web-info flex">
-          <h1>Website name</h1>
-          <p>Giving makes us happier...</p>
-          <a href="#about" class="btn">About</a>
+          <h1>FIND. CHOOSE. DONATE.</h1>
+          <p>Choose your nearest NGO & make a donation to make a difference.</p>
+          <a href="#about" class="btn">Discover</a>
           <!-- <button class="btn">button</button> -->
         </div>
         <div class="web-img">
@@ -38,17 +40,16 @@
         <div class="cont-left flex space">
           <h1 class="shadow">About</h1>
           <p class="about-info">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
-            aperiam ex, saepe quia dicta dolor vitae dignissimos? Voluptatem,
-            incidunt quo.
+            We at NGO Navigation makes it easier for our users to find their nearest NGO.
+            Our main goal is to give more and more exposure to many of the undiscovered NGOs in our cities.
           </p>
           <img class="img-size" src="Ngo/Group 1.png" alt="group1" />
         </div>
         <div class="cont-right flex">
           <div class="donations flex">
-            <span>p</span>
-            <span>p</span>
-            <span>p</span>
+            <span><h1>100</h1></span>
+            <span><h1>535</h1></span>
+            <span><h1>350</h1></span>
           </div>
           <button class="btn">Donate Now</button>
         </div>
