Additional Changes to Landing Page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <span class="title space">NGO Navigation</span>
       <ul class="flex">
         <li><a href="index.html">Home</a></li>
-        <li><a href="/Category/index.html">List</a></li>
+        <li><a href="/Category/index.html">Category</a></li>
         <li><a href="#">Nearby</a></li>
         <li><a href="contact.html">Contact</a></li>  
       </ul>
