--- a/contact.html
+++ b/contact.html
@@ -72,10 +72,11 @@
   </head>
   <body>
     <div class="navbar flex">
-      <span class="title space">Name</span>
+      <span class="title space">NGO Navigation</span>
       <ul class="flex">
         <li><a href="index.html">Home</a></li>
         <li><a href="/Category/index.html">Category</a></li>
+        <li><a href="#">Nearby</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
