--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Category/css/font-circe.css">
     <link rel="stylesheet" href="style.css" />
     <title>NGO Navigation - Find your nearest NGO</title>
@@ -27,7 +30,7 @@
     <div class="section flex">
       <div class="container1 flex">
         <div class="web-info flex">
-          <h1>FIND. CHOOSE. DONATE.</h1>
+          <h1>Find. Choose. Donate.</h1>
           <p>Choose your nearest NGO & make a donation to make a difference.</p>
           <a href="#about" class="btn">Discover</a>
           <!-- <button class="btn">button</button> -->
