PTA NHI KYA HUA

--- a/Discover/index.html
+++ b/Discover/index.html
@@ -22,5 +22,12 @@
           </ul>
         </div>
       </header>
+      <div class="search">
+        <h1>
+          Discover
+        </h1>
+        
+      </div>
+      <div class="wave"><img src="Assets/Group 20.png" alt=""></div>
 </body>
 </html>
