--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Category/css/font-circe.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="Category/css/font-circe.css" />
     <link rel="stylesheet" href="style.css" />
     <title>NGO Navigation - Find your nearest NGO</title>
   </head>
@@ -24,7 +27,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="/Category/index.html">Category</a></li>
         <li><a href="#">Nearby</a></li>
-        <li><a href="contact.html">Contact</a></li>  
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="section flex">
@@ -43,8 +46,9 @@
         <div class="cont-left flex space">
           <h1 class="shadow">About</h1>
           <p class="about-info">
-            We at NGO Navigation makes it easier for our users to find their nearest NGO.
-            Our main goal is to give more and more exposure to many of the undiscovered NGOs in our cities.
+            We at NGO Navigation makes it easier for our users to find their
+            nearest NGO. Our main goal is to give more and more exposure to many
+            of the undiscovered NGOs in our cities.
           </p>
           <img class="img-size" src="Ngo/Group 1.png" alt="group1" />
         </div>
@@ -54,7 +58,8 @@
             <span><h1>535</h1></span>
             <span><h1>350</h1></span>
           </div>
-          <button class="btn">Donate Now</button>
+
+          <a class="btn" href="/Category/index.html">Donate Now</a>
         </div>
       </div>
     </div>
