--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
       }
       p {
         max-width: 700px;
-        color: #193C3C;
+        color: #193c3c;
       }
       .img1 {
         position: absolute;
@@ -55,7 +55,7 @@
       }
       label {
         font-size: 15px;
-        color: #193C3C;
+        color: #193c3c;
       }
       input {
         border: 3px solid #71d2d2;
@@ -76,14 +76,15 @@
       <ul class="flex">
         <li><a href="index.html">Home</a></li>
         <li><a href="/Category/index.html">Category</a></li>
-        <li><a href="#">Nearby</a></li>
+
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="contact">
       <div class="contact-section">
         <p>
-          Don't worry, if you have any questions or doubts &mdash; feel free to contact us.
+          Don't worry, if you have any questions or doubts &mdash; feel free to
+          contact us.
         </p>
 
         <div class="contact-form">
