--- a/contact.html
+++ b/contact.html
@@ -75,9 +75,10 @@
       <span class="title space">NGO Navigation</span>
       <ul class="flex">
         <li><a href="index.html">Home</a></li>
-        <li><a href="/Category/index.html">Category</a></li>
+        <li><a href="Category/index.html">Category</a></li>
+        <li><a href="/nearby.html">Nearby</a></li>
 
-        <li><a href="contact.html">Contact</a></li>
+        <li><a class="active" href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="contact">
