--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <div class="navbar flex">
       <span class="title space">NGO Navigation</span>
       <ul class="flex">
-        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a href="Category/index.html">Category</a></li>
+        <li><a href="/nearby.html">Nearby</a></li>
 
         <li><a href="contact.html">Contact</a></li>
       </ul>
