added All category

--- a/nearby.html
+++ b/nearby.html
@@ -43,6 +43,7 @@
       <div class="location">
         <h1>Discover</h1>
         <select name="State" id="dropdown">
+          <option value="All">All</option>
           <option value="Delhi">Delhi</option>
           <option value="Uttar Pradesh">Uttar Pradesh</option>
           <option value="Maharashtra">Maharashtra</option>
