--- a/nearby.html
+++ b/nearby.html
@@ -53,236 +53,10 @@
       <div class="csec">
         <div id="sw">
           <ul>
-            <li>
-              <div class="card">
+            <li class="flex" id="list">
+              <div class="card multiple_cards">
                 <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div id="ed">
-          <ul>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div id="fd">
-          <ul>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div id="wm">
-          <ul>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div id="sp">
-          <ul>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div id="re">
-          <ul>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
-                  <h2 class="card_title"></h2>
-                  <p class="card_body"></p>
-                  <a href="/Category/blank.html" class="button">Explore</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <div class="card_content">
+                  <img src="" alt="">
                   <h2 class="card_title"></h2>
                   <p class="card_body"></p>
                   <a href="/Category/blank.html" class="button">Explore</a>
