--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <span class="title space">NGO Navigation</span>
       <ul class="flex">
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="Category/index.html">Category</a></li>
+        <!-- <li><a href="Category/index.html">Category</a></li> -->
         <li><a href="/nearby.html">Nearby</a></li>
-
+        <li><a href="/org.html">Add Organization</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
@@ -60,7 +60,7 @@
             <span><h1>350</h1></span>
           </div>
 
-          <a class="btn" href="/Category/index.html">Donate Now</a>
+          <a class="btn" href="/nearby.html">Donate Now</a>
         </div>
       </div>
     </div>
