--- a/nearby.html
+++ b/nearby.html
@@ -24,6 +24,11 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>NGO Navigation - Find your nearest NGO</title>
+      <style>
+        body{
+          overflow-x: hidden;
+        }
+      </style>
   </head>
   <body id="near">
     <header>
@@ -33,9 +38,9 @@
       <div class="navitem">
         <ul>
           <li><a href="index.html">Home</a></li>
-        <li><a href="Category/index.html">Category</a></li>
+        <!-- <li><a href="Category/index.html">Category</a></li> -->
         <li><a class="active" href="/nearby.html">Nearby</a></li>
-
+        <li> <a href="/org.html">Add Organization</a></li>
         <li><a href="contact.html">Contact</a></li>
       </div>
     </header>
