--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Contact</title>
+    <link rel="stylesheet" href="Category/css/font-circe.css" />
+    <link rel="stylesheet" href="/Category/css/main.css" />
+    <link rel="stylesheet" href="/Category/css/navbar.css" />
+    <link rel="stylesheet" href="/Category/css/font-circe.css" />
+    <link rel="stylesheet" href="/Category/Card/main.css" />
+    <link rel="stylesheet" href="style.css" />
     <style>
       body {
         overflow: hidden;
@@ -23,8 +29,10 @@
         max-width: 1400px;
         width: 100%;
         padding-right: 100px;
+      
       }
       .contact-section {
+        position: relative;
         display: flex;
         margin-top: 100px;
 
@@ -58,7 +66,7 @@
         color: #193c3c;
       }
       input {
-        border: 3px solid #71d2d2;
+        border: 1px solid #71d2d2;
         border-radius: 5px;
         height: 35px;
         width: 300px;
@@ -71,16 +79,19 @@
     </style>
   </head>
   <body>
-    <div class="navbar flex">
-      <span class="title space">NGO Navigation</span>
-      <ul class="flex">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Category/index.html">Category</a></li>
+    <header>
+      <div class="logo">
+        <h2>NGO</h2>
+      </div>
+      <div class="navitem">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+        <!-- <li><a href="Category/index.html">Category</a></li> -->
         <li><a href="/nearby.html">Nearby</a></li>
-
+        <li> <a href="/org.html">Add Organization</a></li>
         <li><a class="active" href="contact.html">Contact</a></li>
-      </ul>
-    </div>
+      </div>
+    </header>
     <div class="contact">
       <div class="contact-section">
         <p>
@@ -112,7 +123,9 @@
         <img src="./Ngo/Group 6.png" alt="" />
       </div>
       <div class="img2">
-        <img src="./Ngo/Group 1.png" alt="" />
+        <img style="width: 700px;
+        position: fixed;
+        bottom: 1%;" src="./Ngo/Group 1.png" alt="" />
       </div>
     </div>
   </body>
