--- a/index.html
+++ b/index.html
@@ -54,10 +54,19 @@
           <img class="img-size" src="Ngo/Group 1.png" alt="group1" />
         </div>
         <div class="cont-right flex">
-          <div class="donations flex">
-            <span><h1>100</h1></span>
+          <div
+            style="
+              color: white;
+              font-size: 1.5rem;
+              text-shadow: 2px 2px 3px rgb(53, 52, 52);
+              font-weight: 600;
+            "
+            class="donations flex"
+          >
+            <!-- <span><h1>100</h1></span>
             <span><h1>535</h1></span>
-            <span><h1>350</h1></span>
+            <span><h1>350</h1></span> -->
+            You can bring the change...
           </div>
 
           <a class="btn" href="/nearby.html">Donate Now</a>
